# InverseKinematics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: imgui.ini
assets/shaders/flat_shading_pipeline/: FlatShadingPipeline.frag.hlsl  FlatShadingPipeline.frag.spv
assets/shaders/grid_pipeline/: GridPipeline.frag.hlsl  GridPipeline.frag.hlsl.spv  GridPipeline.frag.spv  GridPipeline.vert.hlsl  GridPipeline.vert.spv
assets/shaders/shape_pipeline/: ShapePipeline.frag.hlsl  ShapePipeline.frag.spv  ShapePipeline.vert.hlsl  ShapePipeline.vert.spv
engine/bedrock/: BedrockPath.cpp
engine/render_system/: CMakeLists.txt  LogicalDevice.cpp  RenderBackend.cpp  UI.cpp  UI.hpp
engine/render_system/camera/: ArcballCamera.cpp  ArcballCamera.hpp  ObserverCamera.cpp  ObserverCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
engine/render_system/pipeline/: BlinnPhongPipeline.cpp  FlatShadingPipeline.cpp  LinePipeline.cpp  PointPipeline.cpp  TextOverlayPipeline.cpp
executables/visualization/: CMakeLists.txt  GridPipeline.cpp  GridPipeline.hpp  SceneRenderPass.cpp  SceneRenderPass.hpp  SceneRenderResource.cpp  SceneRenderResource.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp  ShapePipeline.cpp  ShapePipeline.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  VisualizationApp.cpp  VisualizationApp.hpp  VisualizationMain.cpp
shared/: CMakeLists.txt  InverseKinematic.cpp  InverseKinematic.hpp
